added task tests endpoint. added Makefile
